modified the part used to draw trajectory,and added two buttons.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,6 @@ target_link_libraries(GN ${Sophus_LIBRARIES})
 add_executable(draw draw.cpp)
 target_link_libraries(draw ${Pangolin_LIBRARIES}
                            ${Sophus_LIBRARIES} ${OpenCV_LIBS})
+
+add_executable(display simpledisplay.cpp)
+target_link_libraries(display ${Pangolin_LIBRARIES})
